import { defineModule, encodeId } from "@adeficior/data-modifier-core";
import { createTestAcceptor } from "@adeficior/pack-resolver/testing";
import { createDumpResolver } from "@adeficior/testing";
import { describe, expect, it } from "bun:test";
import type { PolytoneTabs } from "../src/emit/polytoneTabs";
import { PolytoneTabsEmitter } from "../src/emit/polytoneTabs";
import { setupInstance } from "./util/setup";

const module = defineModule<{
  emitters: {
    tabs: PolytoneTabs;
  };
}>({
  name: "internal",
  setup: (pack) => {
    pack.emitter(
      "tabs",
      (container) => new PolytoneTabsEmitter(container.get("registries")),
    );
  },
});

const version = "1.20.1";
const instance = await setupInstance(
  version,
  {
    load: false,
    // TODO do in setup
    dump: await createDumpResolver(version),
  },
  (modules) => {
    modules.install(module);
  },
);

const tabs = instance.get<PolytoneTabs>("emitter:tabs");

describe("creates addition entries", () => {
  it("emits per tab key", async () => {
    const acceptor = createTestAcceptor();

    tabs.add(
      ["something:test_tab", { namespace: "example", path: "food" }],
      ["minecraft:diamond", { namespace: "forge", path: "the_logo" }],
    );

    await instance.emit(acceptor);

    expect(
      acceptor.at(
        "assets/something/polytone/creative_tab_modifiers/test_tab.json",
      ),
    ).toMatchSnapshot("addition modifier 2");
    expect(
      acceptor.at("assets/example/polytone/creative_tab_modifiers/food.json"),
    ).toMatchSnapshot("addition modifier 1");
  });

  it("adds after predicate", async () => {
    const acceptor = createTestAcceptor();

    tabs.add("example:tab", ["minecraft:oak_log"], {
      after: "minecraft:stone_axe",
    });

    await instance.emit(acceptor);

    expect(
      acceptor.at("assets/example/polytone/creative_tab_modifiers/tab.json"),
    ).toMatchSnapshot("addition modifier with after predicate");
  });

  it("adds before predicate", async () => {
    const acceptor = createTestAcceptor();

    tabs.add("example:tab", ["minecraft:oak_planks"], {
      before: "minecraft:stone_hoe",
    });

    await instance.emit(acceptor);

    expect(
      acceptor.at("assets/example/polytone/creative_tab_modifiers/tab.json"),
    ).toMatchSnapshot("addition modifier with after predicate");
  });

  it("uses custom file name", async () => {
    const acceptor = createTestAcceptor();

    tabs.add("something:test_tab", ["minecraft:diamond"], {
      file: "other:id",
    });

    await instance.emit(acceptor);

    expect(
      acceptor.at(
        "assets/something/polytone/creative_tab_modifiers/test_tab.json",
      ),
    ).toBeNull();
    expect(
      acceptor.at("assets/other/polytone/creative_tab_modifiers/id.json"),
    ).toMatchSnapshot("removal modifier with custom file name");
  });

  it("fails trying to merge modifiers with different targets", () => {
    tabs.add("something:test_tab", ["minecraft:diamond"], {
      file: "other:id",
    });

    expect(() =>
      tabs.add("something:another_tab", ["minecraft:diamond_chestplate"], {
        file: "other:id",
      }),
    ).toThrow("trying to merge modifiers with different targets");
  });
});

describe("create removal entries", () => {
  it("resolves filter correctly", async () => {
    const acceptor = createTestAcceptor();

    tabs.remove(
      ["something:test_tab", { namespace: "example", path: "food" }],
      ["minecraft:diamond", { namespace: "forge", path: "the_logo" }],
    );

    await instance.emit(acceptor);

    expect(
      acceptor.at(
        "assets/something/polytone/creative_tab_modifiers/test_tab.json",
      ),
    ).toMatchSnapshot("removal modifier 2");
    expect(
      acceptor.at("assets/example/polytone/creative_tab_modifiers/food.json"),
    ).toMatchSnapshot("removal modifier 1");
  });

  it("uses custom file name", async () => {
    const acceptor = createTestAcceptor();

    tabs.remove("something:test_tab", ["minecraft:diamond"], {
      file: "other:id",
    });

    await instance.emit(acceptor);

    expect(
      acceptor.at(
        "assets/something/polytone/creative_tab_modifiers/test_tab.json",
      ),
    ).toBeNull();
    expect(
      acceptor.at("assets/other/polytone/creative_tab_modifiers/id.json"),
    ).toMatchSnapshot("removal modifier with custom file name");
  });
});

describe("create new tabs", () => {
  it("emits and mergers csv", async () => {
    const acceptor = createTestAcceptor();

    const id = tabs.create("something:test_tab");
    tabs.create("minecraft:another_tab");

    await instance.emit(acceptor);

    expect(encodeId(id)).toMatch("something:test_tab");
    expect(
      acceptor.at(
        "assets/something/polytone/creative_tab_modifiers/create/test_tab.json",
      ),
    ).toMatchSnapshot("tab creation modifier for minecraft");
    expect(
      acceptor.at(
        "assets/minecraft/polytone/creative_tab_modifiers/create/another_tab.json",
      ),
    ).toMatchSnapshot("tab creation modifier for something");
  });
});
